--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "homepage": "https://github.com/okediarthur/Odin-To-Do-App#readme",
   "devDependencies": {
     "css-loader": "^7.1.1",
-    "webpack-cli": "^5.1.4"
+    "html-webpack-plugin": "^5.6.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
